:bug: domains gap

--- a/assets/scss/partials/_custom.scss
+++ b/assets/scss/partials/_custom.scss
@@ -94,7 +94,7 @@ a{
   display: flex;
   width: fit-content;
   flex-wrap: wrap;
-  column-gap: 0.5rem;
+  gap: 0.5rem;
   li{
     list-style: none;
   }
